--- a/pom.xml
+++ b/pom.xml
@@ -110,22 +110,11 @@
             <scope>runtime</scope>
         </dependency>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <!-- Redis 客户端与模板 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <!--        -->
         <dependency>
