--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=v1
+spring.config.import=optional:application-local.properties
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://db.leafone.20050508.xyz:3306/leafone?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
@@ -17,3 +18,12 @@ spring.mail.default-encoding=UTF-8
 # TLS
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=false
+
+# Redis Configuration (??????????? application-local.properties ??)
+
+
+
+
+
+
+
